Ямл добавил, ошибки исправил. Но теперь спринг крашится :)