@@ -11,15 +11,17 @@ import faang.school.postservice.repository.LikeRepository;
 import faang.school.postservice.repository.PostRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections4.ListUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 
+import jakarta.annotation.PostConstruct;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -33,7 +35,13 @@ public class LikeServiceImpl implements LikeService {
     private final LikeServiceValidator likeServiceValidator;
     private final UserServiceClient userServiceClient;
 
-    private static final int BATCH_SIZE = 100;
+    @Value("${like-service.batch-size}")
+    private int batchSize;
+
+    @PostConstruct
+    public void init() {
+        log.info("Batch size from configuration: {}", batchSize);
+    }
 
 
     @Override
@@ -109,13 +117,13 @@ public class LikeServiceImpl implements LikeService {
         log.info("Getting users who liked post with id: {}", postId);
 
         Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new RuntimeException("Post not found"));
+                .orElseThrow(() -> new RuntimeException("Post with id " + postId + " not found"));
 
         List<Like> likes = post.getLikes();
 
         List<Long> userIds = likes.stream()
                 .map(Like::getUserId)
-                .collect(Collectors.toList());
+                .toList();
 
         return getUsersInBatches(userIds);
     }
@@ -125,13 +133,13 @@ public class LikeServiceImpl implements LikeService {
         log.info("Getting users who liked comment with id: {}", commentId);
 
         Comment comment = commentRepository.findById(commentId)
-                .orElseThrow(() -> new RuntimeException("Comment not found"));
+                .orElseThrow(() -> new RuntimeException("Comment with id " + commentId + " not found"));
 
         List<Like> likes = comment.getLikes();
 
         List<Long> userIds = likes.stream()
                 .map(Like::getUserId)
-                .collect(Collectors.toList());
+                .toList();
 
         return getUsersInBatches(userIds);
     }
@@ -139,13 +147,11 @@ public class LikeServiceImpl implements LikeService {
     private List<UserDto> getUsersInBatches(List<Long> userIds) {
         List<UserDto> users = new ArrayList<>();
 
-        for (int i = 0; i < userIds.size(); i += BATCH_SIZE) {
-            List<Long> batch = userIds.subList(i, Math.min(i + BATCH_SIZE, userIds.size()));
-
+        List<List<Long>> batches = ListUtils.partition(userIds, batchSize);
+        for (List<Long> batch : batches) {
             List<UserDto> batchUsers = userServiceClient.getUsersByIds(batch);
             users.addAll(batchUsers);
         }
-
         return users;
     }
 }
